--- a/View/vListPage.xaml
+++ b/View/vListPage.xaml
@@ -11,12 +11,13 @@
              d:DesignWidth="800"
              Height="856" 
              Width="1034">
-    <Grid Background="White">
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="1"/>
             <RowDefinition Height="80"/>
-            <RowDefinition Height="120"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="800"/>
+          
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="1">
@@ -27,10 +28,9 @@
                 FontSize="55"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="2">
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
             <ComboBox
-                Name="cmbSubject"
-                Margin="34,10,690,19" 
+                Name="cmbSubject"                 
                 materialDesign:HintAssist.Hint="SUBJECT"  
                 IsEditable="True"  
                 HorizontalContentAlignment="Left"
@@ -41,9 +41,47 @@
 
         <StackPanel Grid.Row="3">
             <DataGrid
-                Background="Gray"
-                Height="200">
-                
+                Margin="0,0,10,0"
+                Background="White"
+                Height="620"                                 
+                IsReadOnly="True"            
+                x:Name="dgDocList"                                                    
+                AlternatingRowBackground="WhiteSmoke"                                          
+                AutoGenerateColumns="False"            
+                HorizontalScrollBarVisibility="Disabled" >
+                <DataGridTemplateColumn  
+                        Header=" SUBJECT"                                        
+                        MinWidth="200"                    
+                        Width="315">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <AccessText 
+                                VerticalAlignment="Center"                                   
+                                Text="{Binding Path=DocSubject}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn  
+                        Header=" SUBJECT"                                        
+                        MinWidth="200"                    
+                        Width="315">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <AccessText 
+                                VerticalAlignment="Center"                                   
+                                Text="{Binding Path}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGrid.Resources>
+                    <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="#303134"/>
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="FontWeight" Value="Bold"/>
+                    </Style>
+                </DataGrid.Resources>
             </DataGrid>
         </StackPanel>
     </Grid>
