--- a/Dialogs/dAddFocals.xaml
+++ b/Dialogs/dAddFocals.xaml
@@ -15,7 +15,7 @@
         Height="401.744" 
         Width="565.317"         
         WindowStyle="None">
-    <Grid MouseDown="StackPanel_MouseDown">
+    <Grid MouseDown="StackPanel_MouseDown" DataContext="{Binding Path=Focal}">
         <Grid.RowDefinitions>
             <RowDefinition Height="0"/>
             <RowDefinition Height="40"/>
@@ -39,14 +39,15 @@
                 BorderThickness="2" 
                 Margin="10">
 
-            <StackPanel Grid.Row="2"                         
+            <StackPanel Grid.Row="2"         
+                        Name="sp1"                
                         Background="White" 
                         Margin="0,0,0,7">
                 <TextBox  
                     x:Name="txtFullName"                             
                     Margin="15,45,0,0"                                                                   
                     HorizontalAlignment="Left"                                                                    
-                    Text="{Binding DocSubject}"                                                                                                                                      
+                    Text="{Binding FullName}"                                                                                                                                      
                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"                                                                       
                     VerticalAlignment="Top"                                                                                       
                     AcceptsReturn="True"                             
@@ -58,7 +59,7 @@
                     x:Name="txtNickname"                             
                     Margin="280,-40,0,0"                                                                   
                     HorizontalAlignment="Left"                                                                    
-                    Text="{Binding DocSubject}"                                                                                                                                      
+                    Text="{Binding NickName}"                                                                                                                                      
                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"                                                                       
                     VerticalAlignment="Top"                                                                                       
                     AcceptsReturn="True"                             
@@ -70,7 +71,7 @@
                     x:Name="txtEmail"                             
                     Margin="15,10,0,0"                                                                   
                     HorizontalAlignment="Left"                                                                    
-                    Text="{Binding DocSubject}"                                                                                                                                      
+                    Text="{Binding Email}"                                                                                                                                      
                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"                                                                       
                     VerticalAlignment="Top"                                                                                       
                     AcceptsReturn="True"                             
@@ -82,7 +83,7 @@
                     x:Name="txtContact"                             
                     Margin="280,-40,0,0"                                                                 
                     HorizontalAlignment="Left"                                                                    
-                    Text="{Binding DocSubject}"                                                                                                                                      
+                    Text="{Binding ContactNumber}"                                                                                                                                      
                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"                                                                       
                     VerticalAlignment="Top"                                                                                       
                     AcceptsReturn="True"                             
@@ -92,12 +93,12 @@
                     Height="Auto"/>
 
                 <ComboBox                                    
-                    SelectedIndex="{Binding Path=Plantilla}"                 
+                    SelectedIndex="{Binding Path=PlantillaID}"                 
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}"                  
                     HorizontalAlignment="Left"               
                     VerticalContentAlignment="Top"                                                 
                     FontSize="14"                  
-                    Name="cmbSex"                                              
+                    Name="cmbPosition"                                              
                     materialDesign:HintAssist.Hint="POSITION"               
                     Margin="15,10,0,0" Height="Auto" Width="235">
                     <ComboBoxItem>
@@ -109,7 +110,7 @@
                 </ComboBox>
 
                 <ComboBox                                    
-                    SelectedIndex="{Binding Path=Focalship}"                 
+                    SelectedIndex="{Binding Path=FocalshipID}"                 
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}"                  
                     HorizontalAlignment="Left"               
                     VerticalContentAlignment="Top"                                                 
@@ -126,7 +127,7 @@
                 </ComboBox>
                
                 <ComboBox                                    
-                    SelectedIndex="{Binding Path=Office}"                 
+                    SelectedIndex="{Binding Path=OfficeID}"                 
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}"                  
                     HorizontalAlignment="Left"               
                     VerticalContentAlignment="Top"                                                 
