--- a/Dialogs/dAddFocalship.xaml
+++ b/Dialogs/dAddFocalship.xaml
@@ -15,7 +15,7 @@
         Height="216.744" 
         Width="565.317"         
         WindowStyle="None">
-    <Grid  MouseDown="StackPanel_MouseDown">
+    <Grid  MouseDown="StackPanel_MouseDown" DataContext="{Binding Focalship}">
         <Grid.RowDefinitions>
             <RowDefinition Height="0"/>
             <RowDefinition Height="40"/>
@@ -40,7 +40,8 @@
                 BorderThickness="2" 
                 Margin="10,5,10,187">
 
-            <StackPanel Grid.Row="2"                         
+            <StackPanel Grid.Row="2"         
+                        Name="sp1"                
                         Background="White" 
                         Margin="0,0,0,7">
                 <TextBox  
@@ -92,7 +93,7 @@
                 Margin="345,0,0,0"
                 Style="{StaticResource MaterialDesignRaisedDarkButton}"                
                 Width="100"                
-                ToolTip="SAVE" >
+                ToolTip="SAVE" Click="btnSave_Click" >
             </Button>
             <Button             
                           
